peac_dev/force-app/main/default/objects/DocumentStatus__c/DocumentStatus__c.object-meta.xml
<CustomObject>
    <label>Document Status</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Document Status Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Document Statuses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>