peac_dev/force-app/main/default/objects/DocumentStatus__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Documents</relationshipLabel>
    <relationshipName>Document_Statuses</relationshipName>
    <type>Lookup</type>
</CustomField>