peac_dev/force-app/main/default/objects/DocumentStatus__c/fields/Contract_Asset__c.field-meta.xml
<CustomField>
    <fullName>Contract_Asset__c</fullName>
    <description>to create the Document Checklist on Contract Asset</description>
    <label>Contract Asset</label>
    <referenceTo>Contract_Asset__c</referenceTo>
    <relationshipLabel>Title Packet</relationshipLabel>
    <relationshipName>Title_Packet</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>